Fixed z-index in loginimage

--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -879,7 +879,6 @@ margin-top: 10px;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1135,7 +1134,6 @@ margin-top: 10px;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
